<resources>
    <string name="app_name">Home Safety</string>

    <string name="action_sign_in_short">Registrar</string>
    <string name="email">Email</string>
    <string name="minimum_password">Contraseña muy corta, minímo 6 caracteres!</string>
    <string name="auth_failed">Falla de autenticación, revice su email y contraseña ó registrece</string>
    <string name="auth_failed_p">Falla de autenticación, revice su contraseña</string>
    <string name="change_email">Cambiar Email</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="send_password_reset_email">Enviar Email de cambio de contraseña</string>
    <string name="remove_user">Eliminar Usuario</string>
    <string name="new_pass">Nueva Contraseña</string>
    <string name="title_activity_profile">SSh</string>
    <string name="title_activity_login">Iniciar Sección</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="btn_login">INICAR SECCIÓN</string>
    <string name="btn_link_to_register">¿No eres miembro? Registrate en SSH ahora!</string>
    <string name="btn_link_to_login">¿Registrado?. Inicia Sección!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">¿Olvidó su contraseña?</string>
    <string name="btn_reset_password">Reiniciar Contraseña</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">Nuevo Email</string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Eliminar</string>
    <string name="btn_sign_out">Cerrar Sección</string>
    <string name="lbl_forgot_password">¿Olvidó su contraseña?</string>
    <string name="hint">Seleccione Parametro</string>
    <string name="forgot_password_msg">Introdusca el Email asignado a su cuenta para enviar instrucciones de cambio de contraseña.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Settings</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Settings</item>
    </string-array>

    <string-array name="cabecera_tabla">
        <item>ID</item>
        <item>Date</item>
        <item>Time</item>
        <item>User</item>
        <item>Device</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
